pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-custom
  #namespace: app-ns
  labels:
    app: nginx-custom
spec:
  containers:
  - name: nginx
    image: saisaubhagya/test-repo:sai-nginx
    ports:
    - containerPort: 80
    #volumeMounts:
    #- name: html-volume
      #mountPath: /usr/share/nginx/html/index.html
      #subPath: index.html
  #volumes:
  #- name: html-volume
    #configMap:
      #name: custom-index-html
