service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-custom-service
  #namespace: app-ns
spec:
  selector:
    app: nginx-custom
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
