ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/subnets: subnet-044a4b316b3b5b619, subnet-0e29cafd42a7e3fab, subnet-045a075a207293eb0
    alb.ingress.kubernetes.io/target-type: ip
  name: "2048-ingress"
  #namespace: "app-ns"
  labels:
    app: 2048-ingress
spec:
  ingressClassName: alb
  rules:
    - host: test.xplore727.life
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: "nginx-custom-service"
                port:
                  number: 80
